2.0.2 (22.03.2018):

* Clear view if no page selected


2.0.1 (12.03.2018):

* Fixed editing OCR output
* Fixed displaying image after undoing
* Fixed displaying image after deleting page
* Fixed text in progress bars
* Fixed warning message clearing all pages if no scanner detected


2.0.0 (08.03.2018):

* Switch from gtk+-2 to gtk+-3, requiring the reimplementation of GtkImageview
  in pure Perl, as C library not compatible with gtk+-3.
* Fixed ghosting if flatbed only source option but not set.
  Closes #290 (Page Options -> Pages: scanning only first page of n)
* Fixed setting preferences if frontend not set to libsane-image-perl and no
  scanner available. Closes #291 (Cannot change temporary directory)


1.8.11 (26.01.2018):

* + preference "Force new scan job between pages"
* support applying profiles resulting in multiple reloads, to prevent profile
  dropdown from being cleared after setting profile.
  Closes #276 (Scan profile stays blank)
* Update to Czech translation (thanks to Pavel Borecki)


1.8.10 (27.11.2017):

* + support for scan options without ranges, e.g. booleans, in tolerance check
  introduced in v1.8.9


1.8.9 (24.11.2017):

* Rename preference "Open scan dialog at program start"
  -> "Open scanner at program start"
* Fix killing processes on cancel
* Hide extended page numbering checkbox and source document frame unless scanner
  is not capable of duplex and ADF is selected. Therefore, for duplex-capable
  scanners, this is never shown. For duplex-incapable scanners, this is shown if
  the ADF is selected, but otherwise hidden.
* + support for the new API in ImageMagick 7 for unsharp mask
* For single-sided documents, hide rotate facing/reverse/both side dropdown.
* + missing documentation for Edit/Properties
* Don't reapply scan settings if value is within tolerance.
  Closes bug #287 (Reload recursion limit (5050) exceeded)
* Fix crash reading corrupt config file
  Closes bug #288 (gscan2pdf-1.8.8 does not run in Ubuntu 16.04)