@@ -1,6 +1,7 @@
 2.0.2 (22.03.2018):
 
 * Clear view if no page selected
+* Change boolean scan options to use switch instead of checkbox widget
 
 
 2.0.1 (12.03.2018):
